crates/swc_ecma_parser/tests/test262-error-references/fail/464c40302f9a1a10.js.stderr
error: Expected unicode escape
 --> $DIR/tests/test262-parser/fail/464c40302f9a1a10.js:1:2
  |
1 | x\
  |  ^

